[package]
name = "win-sandbox"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Non-elevated Windows restricted-token sandbox (vendored & decoupled from openai/codex)"
repository = "https://github.com/yoke233/win-sandbox"

[lib]
name = "win_sandbox"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "win-sandbox-run"
path = "src/bin/win-sandbox-run/main.rs"

[dependencies]
anyhow = "1.0"
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing-appender = "0.2"
dirs-next = "2.0"

[dependencies.rand]
version = "0.8"
default-features = false
features = ["std", "small_rng"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_Pipes",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
